syntax = "proto3";
package nested;

import "imported.proto";

message InnerMessageLevel2 {
  string name = 1;
}

message InnerMessage {
  InnerMessageLevel2 innerMessage2 = 1;
}

message MessageContainer {
  InnerMessage inner = 1;
}

message MessageContainer2 {
  imported.ImportedMessage importedMessage = 1;
}
